[workspace]
members = [
  "contracts/address-provider",
  "contracts/oracle/*",
  "contracts/lending",
  "packages/health",
  "packages/testing",
  "packages/types",
  "packages/utils",
  "integration-tests",
]
resolver = "2"

[workspace.package]
version       = "1.0.0"
authors       = [
  "Solar Ape. <x0s0l@kawa.finance>"
]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/kawafinance"
homepage = "https://kawa.finance"
documentation = "https://docs.kawa.finance/"
keywords = [
  "kawa",
  "seinetwork"
]

[workspace.dependencies]
anyhow            = "1.0.71"
bech32            = "0.9.1"
cosmwasm-schema   = "1.2.6"
cosmwasm-std      = "1.2.6"
cw2               = "1.1.0"
cw-storage-plus   = "1.0.1"
cw-utils          = "1.0.1"
mars-owner        = { version = "1.2.0", features = ["emergency-owner"] }
osmosis-std       = "0.16.1"
prost             = { version = "0.11.5", default-features = false, features = ["prost-derive"] }
schemars          = "0.8.12"
serde             = { version = "1.0.163", default-features = false, features = ["derive"] }
thiserror         = "1.0.40"
pyth-sdk-cw        = "1.2.0"
cw-paginate       = "0.2.1"
astroport         = "2.8.0"
strum             = "0.24.1"
neutron-sdk       = "0.6.0"

# dev-dependencies
cw-multi-test     = "0.16.5"
cw-it             = "0.1.0"
osmosis-test-tube = "16.0.0"
test-case         = "3.0.0"
proptest          = "1.1.0"

# packages
kawa-health         = { path = "./packages/health" }
kawa-lending-types  = { path = "./packages/types" }
kawa-testing        = { path = "./packages/testing" }
kawa-utils          = { path = "./packages/utils" }

# contracts
kawa-address-provider          = { path = "./contracts/address-provider" }
kawa-oracle-base               = { path = "./contracts/oracle/base" }
kawa-oracle-wasm               = { path = "./contracts/oracle/wasm" }
kawa-lending                   = { path = "./contracts/lending" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
